# Qt_Cmake

./: .gitignore  CMakeLists.txt  README.md  version.h.in
Tian/: CMakeLists.txt  README.md
Tian/include/Tian/QControl/QCustomPlot/: qcustomplot.h
Tian/lib/: libCommProtocols.dylib  libCommunicator.dylib  libRegistrationCode.dylib  liblightbutton.dylib
Tian/src/CommProtocols/: CMakeLists.txt
Tian/src/CommProtocols/include/CommProtocols/: CommProtocols.h
Tian/src/CommProtocols/src/: CommProtocols.cpp
Tian/src/Communicator/: CMakeLists.txt
Tian/src/Communicator/include/Communicator/: CommunicationInterface.h  Communicator.h  LockFreeQueue.h  MsgQueue.h  SerialPortClient.h  TCPClient.h  UDPClient.h
Tian/src/Communicator/src/: CommunicationInterface.cpp  Communicator.cpp  SerialPortClient.cpp  TCPClient.cpp  UDPClient.cpp
Tian/src/MODBUS_COMM/: CMakeLists.txt  README.md
Tian/src/MODBUS_COMM/cache/: CMakeLists.txt
Tian/src/MODBUS_COMM/cache/src/: cachebase.cpp
Tian/src/MODBUS_COMM/comm/: CMakeLists.txt
Tian/src/MODBUS_COMM/comm/src/: comminterface.cpp  commmodbusrtu.cpp  commmodbustcp.cpp  commprotocol.cpp  serialport.cpp  tcpsocket.cpp
Tian/src/MODBUS_COMM/device/: CMakeLists.txt
Tian/src/MODBUS_COMM/device/src/: device.cpp
Tian/src/QControl/: CMakeLists.txt
Tian/src/QControl/FramelessWidget/: CMakeLists.txt
Tian/src/QControl/FramelessWidget/lib/: FramelessWidget.exp  FramelessWidget.lib  libFramelessWidget.dylib
Tian/src/QControl/FramelessWidget/src/: FramelessWidget.cpp
Tian/src/QControl/QCustomPlot/: CMakeLists.txt
Tian/src/QControl/QCustomPlot/src/: qcustomplot.cpp
Tian/src/QControl/QXlsx/: CMakeLists.txt  README.md
Tian/src/QControl/RegistrationCode/: CMakeLists.txt  CMakeLists.txt.user.5a111f8
Tian/src/QControl/RegistrationCode/lib/: RegistrationCode.exp  RegistrationCode.lib  libRegistrationCode.dylib
Tian/src/QControl/RegistrationCode/src/: registrationcode.cpp
Tian/src/QControl/TreeItem/: CMakeLists.txt
Tian/src/QControl/TreeItem/src/: treeitem.cpp
Tian/src/QControl/comtool/: CMakeLists.txt  CMakeLists.txt.user.f332674
Tian/src/QControl/comtool/api/: appconfig.h  appdata.h  qthelper.cpp  qthelper.h  qthelperdata.h
Tian/src/QControl/comtool/form/: frmcomtool.cpp  frmcomtool.h  frmcomtool.ui
Tian/src/QControl/comtool/lib/: ComTool.exp  ComTool.lib  libComTool.dylib
Tian/src/QControl/comtool/translations/: comtool_cn.ts  comtool_en.ts
Tian/src/QControl/lightbutton/: CMakeLists.txt
Tian/src/QControl/nettool/: CMakeLists.txt  CMakeLists.txt.user.5a111f8  main.cpp
Tian/src/QControl/text-document-integration/: CMakeLists.txt
Tian/src/SQL/MySQL/: CMakeLists.txt  README.md
app/: CMakeLists.txt  app
app/include/app/: customtreeview.h  logindialog.h  mainwindow.h  settingwidget.h
app/include/app/Admin/: admin.h  dataanalysiswidget.h  devicemanagementwidget.h  deviceviewwidget.h  logmanagementwidget.h  systemsettingwidget.h  usermanagementwidget.h
app/include/app/SuperAdmin/: superadmin.h
app/include/app/User/: user.h
app/main/: main.cpp
app/qrc/: app_win32.rc  logo.qrc  resource.qrc
app/qrc/css/: AdminWindow.css  LoginDialog.css  SettingWidget.css
app/qrc/css/Admin/: AdminWindow.css  DataAnalysisWidget.css  DeviceViewWidget.css
app/qrc/css/Flat/: AdminWindow.css  Admin_DataAnalysisWidget.css  Admin_InsertUserDialog.css  Admin_LogManagementWidget.css  Admin_UpdateUserDialog.css  AppInfoDialog.css  DeviceManagementWidget.css  DeviceViewWidget.css  LoginDialog.css  RegistrationCodeDialog.css  RegistrationExpirationReminder.css  SurperAdminWindow.css  User_DataAnalysisWidget.css  User_LogManagementWidget.css
app/qrc/languages/: login_cn.qm
app/src/: customtreeview.cpp  logindialog.cpp  mainwindow.cpp  settingwidget.cpp
app/src/Admin/: admin.cpp  dataanalysiswidget.cpp  devicemanagementwidget.cpp  deviceviewwidget.cpp  logmanagementwidget.cpp  systemsettingwidget.cpp  usermanagementwidget.cpp
app/src/SuperAdmin/: superadmin.cpp
app/src/User/: user.cpp
app/translations/: app_cn.ts  app_en.ts
app/ui/: logindialog.ui  mainwindow.ui  settingwidget.ui
app/ui/Admin/: admin.ui  dataanalysiswidget.ui  devicemanagementwidget.ui  deviceviewwidget.ui  logmanagementwidget.ui  systemsettingwidget.ui  usermanagementwidget.ui
app/ui/SuperAdmin/: superadmin.ui
app/ui/User/: user.ui
main/: CMakeLists.txt  app_win32.rc  main.cpp  qthelper.cpp  qthelper.h
src/: CMakeLists.txt
src/RegistrationCode/: CMakeLists.txt
src/RegistrationCode/include/RegistrationCode/: registrationcode.hpp
src/RegistrationCode/lib/: libRegistrationCode.dylib
src/RegistrationCode/src/: registrationcode.cpp
src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/gui/: CMakeLists.txt
src/gui/include/private/gui/: config.h  (+25 more)
src/gui/qrc/: resource.qrc
src/gui/qrc/languages/: gui_cn.qm  gui_en.qm  gui_zh_CN.qm
src/gui/src/: config.cpp  drag_drop_plain_text_edit_rc.cpp  dragdropplaintexteditrc.cpp  gui_app.cpp  guiapp.cpp  main_object.cpp  main_window.cpp  mainobject.cpp  mainwindow.cpp  registration_code_dialog.cpp  registration_expiration_reminder.cpp  registrationcodedialog.cpp  registrationexpirationreminder.cpp  signal_manager_singleton.cpp  signalmanager.cpp
src/gui/translations/: gui_cn.ts  gui_en.ts  gui_zh_CN.ts
src/gui/ui/: main_window.ui  mainwindow.ui  registration_code_dialog.ui  registration_expiration_reminder.ui  registrationcodedialog.ui  registrationexpirationreminder.ui
src/precision_countdown/: CMakeLists.txt
src/precision_countdown/include/precision_countdown/: precision_countdown.hpp
src/registration_code/: CMakeLists.txt
src/registration_code/include/registration_code/: registration_code.hpp
src/registration_code/lib/: RegistrationCode.exp  RegistrationCode.ilk  RegistrationCode.lib
src/registration_code/lib/mac/: libregistration_code.dylib
src/registration_code/lib/win/: registration_code.lib
src/registration_code/src/: registration_code.cpp
src/test/: CMakeLists.txt  cout_hello.cpp  cout_hello.h
tests/cpp_test/: CMakeLists.txt  main.cpp
(+83 files in other folders)
